--- a/WeatherApp/src/components/search/SearchBar.css
+++ b/WeatherApp/src/components/search/SearchBar.css
@@ -6,6 +6,11 @@
 
 .SearchBar {
     margin: 20px;
-    padding: 3px 10px;
+    padding: 5px 10px;
     width: 20%;
+    font-family: inherit;
+    border: 2px solid black;
+    border-radius: 5px;
+    line-height: 20px;
+    font-size: 1.1rem;
 }
